Correcting affliction level display and rolls to account for new data structure

--- a/templates/actor/actor-sheet.html
+++ b/templates/actor/actor-sheet.html
@@ -569,8 +569,8 @@
 						<td>{{item.name}}</td>
 						<td>{{affliction.name}}</td>
 						<td>
-							{{item.data.level}}
-							<label class="fa fa-dice-six rollable" data-level="{{item.data.level}}"
+							{{item.data.data.level}}
+							<label class="fa fa-dice-six rollable" data-level="{{item.data.data.level}}"
 								   data-label="Casts &lt;b&gt;{{item.name}} {{affliction.name}}&lt;/b&gt;" data-type="skill"></label>
 						</td>
 						<td>
