--- a/templates/actor/actor-sheet.html
+++ b/templates/actor/actor-sheet.html
@@ -188,17 +188,18 @@
                             <label class="title">Mod</label>
                             <label class="title">Pts</label>
                         </div>
+						{{log data.data.primaryAttributes}}
 						{{#each data.data.primaryAttributes as |attr id|}}
 							<div class="primary-attribute" id="{{attr.id}}">
 									<label style="font-weight: bold">{{attr.abbr}}</label>
-									<input type="text" name="data.primaryAttributes.{{id}}.value" class="atrVal" value="{{attr.value}}"
+									<input type="number" name="data.primaryAttributes.{{id}}.value" class="atrVal" value="{{attr.value}}"
 										data-dtype="Number" disabled />
-									<input type="text" name="data.primaryAttributes.{{id}}.mod" class="atrMod" value="{{attr.mod}}"
+									<input type="number" name="data.primaryAttributes.{{id}}.mod" class="atrMod" value="{{attr.mod}}"
 												 data-dtype="Number" />
-								{{#if attr.points includeZero=true}}
-									<input type="text" name="data.primaryAttributes.{{id}}.points" class="atrPoints" value="{{attr.points}}"
+								{{#unless (eq attr.abbr "Knockback")}}
+									<input type="number" name="data.primaryAttributes.{{id}}.points" class="atrPoints" value="{{attr.points}}"
 												 data-dtype="Number" />
-								{{/if}}
+								{{/unless}}
 								{{#unless (or (eq attr.abbr "Speed") (eq attr.abbr "Move") )}}
 								<label for="data.primaryAttributes.{{id}}.value" class="fa fa-dice-six rollable"
 											 data-level="{{attr.value}}" data-label="Makes a &lt;b&gt;{{attr.abbr}}&lt;/b&gt; check."
