--- a/templates/item/spell-sheet.html
+++ b/templates/item/spell-sheet.html
@@ -117,6 +117,10 @@
                     <td>Category</td>
                     <td><input type="text" name="data.subCategory" value="{{data.data.subCategory}}" placeholder="Leave this blank if you don't want it categorized"/></td>
                 </tr>
+                <tr id="college">
+                    <td>College</td>
+                    <td><input type="text" name="data.college" value="{{data.data.college}}" placeholder="This costs ten times as much for characters in the USA"/></td>
+                </tr>
                 <tr>
                     <td>Notes</td>
                     <td><input type="text" name="data.shortNotes" value="{{data.data.shortNotes}}"/></td>
