--- a/templates/actor/actor-sheet.html
+++ b/templates/actor/actor-sheet.html
@@ -270,7 +270,7 @@
 						{{#each ../actor.data.items as |item id|}}
 							{{#if (eq type "Trait") }}
 								{{#if (eq item.data.data.subCategory category)}}
-									<tr class="item accordion-div-{{category}} accordion-open" data-item-id="{{item._id}}">
+									<tr class="item accordion-div-{{category}} accordion-open" data-item-id="{{item.id}}">
 										<td class="item-image" style="width: 24px; padding: 0 2px">
 											<img src="{{item.img}}" title="{{item.name}}" width="24" height="24" />
 										</td>
@@ -329,7 +329,7 @@
 						{{#each ../actor.data.items as |item id|}}
 							{{#if (eq type "Rollable")}}
 								{{#if (eq item.data.data.subCategory category)}}
-									<tr class="item accordion-div-{{category}} accordion-open" data-item-id="{{item._id}}">
+									<tr class="item accordion-div-{{category}} accordion-open" data-item-id="{{item.id}}">
 										<td class="item-image" style="width: 24px; padding: 0 2px">
 											<img src="{{item.img}}" title="{{item.name}}" width="24" height="24" />
 										</td>
@@ -616,8 +616,8 @@
 						{{#each ../actor.data.items as |item id|}}
 							{{#if (eq type "Equipment") }}
 								{{#if (eq item.data.data.subCategory category)}}
-								{{log item}}
-									<tr class="item accordion-div-{{category}} accordion-open" data-item-id="{{item._id}}">
+									{{log item}}
+									<tr class="item accordion-div-{{category}} accordion-open" data-item-id="{{item.id}}">
 										<td class="item-image" style="width: 24px; padding: 0 2px">
 											<img src="{{item.img}}" title="{{item.name}}" width="24" height="24" />
 										</td>
@@ -2805,7 +2805,7 @@
 							{{#each ../actor.data.items as |item id|}}
 								{{#if (eq type "Spell")}}
 									{{#if (eq item.data.data.subCategory category)}}
-										<tr class="item accordion-div-{{category}} accordion-open" data-item-id="{{item._id}}">
+										<tr class="item accordion-div-{{category}} accordion-open" data-item-id="{{item.id}}">
 											<td class="item-image" style="width: 24px; padding: 0 2px">
 												<img src="{{item.img}}" title="{{item.name}}" width="24" height="24" />
 											</td>
