Updating afflictions to use the new roll logic.

--- a/templates/actor/actor-sheet.html
+++ b/templates/actor/actor-sheet.html
@@ -2777,7 +2777,7 @@
 						</tr>
 						<tr>
 							<td style="width: 20%">
-								Magical Ability
+								Total Ability
 							</td>
 							<td>
 								{{data.data.magic.totalMagicAttribute}}
