Adding entry for spellcaster's staff to reduce range penalties

--- a/templates/actor/actor-sheet.html
+++ b/templates/actor/actor-sheet.html
@@ -2783,6 +2783,17 @@
 								{{data.data.magic.totalMagicAttribute}}
 							</td>
 						</tr>
+						<tr>
+							<td style="width: 20%" class="tooltip">
+								Length of Staff
+								<span class="tooltiptext">
+									For the purposes of reducing range penalties for Regular spells
+								</span>
+							</td>
+							<td>
+								<input type="number" name="data.magic.staff" value="{{data.data.magic.staff}}" placeholder="0" />
+							</td>
+						</tr>
 					</table>
 					<table>
 						<tr class="item item-header">
