Fixing issue where text fields on the trait sheet wouldn't save.

--- a/templates/item/trait-sheet.html
+++ b/templates/item/trait-sheet.html
@@ -60,7 +60,7 @@
         <div class="tab stats" data-tab="notes" data-group="primary">
             <div class="tab">
                 <h3 class="bold">Detailed Notes</h3>
-                <textarea rows="8" name="data.notes">{{{data.notes}}}</textarea>
+                <textarea rows="8" name="data.notes">{{{data.data.notes}}}</textarea>
             </div>
         </div>
 
