Move TODOs out of code and into github issues.

--- a/templates/item/Spell-sheet.html
+++ b/templates/item/Spell-sheet.html
@@ -334,7 +334,7 @@
             <h3 class="addAfflictionRow" style="text-align: right;">Add Row</h3>
             <div class="tab">
                 <table>
-                    <tr class="equipment-header"> <!-- TODO - Make afflictions know if they are quick contests/resistance rolls - 3 -->
+                    <tr class="equipment-header">
                         <td class="resource-label">Name</td>
                         <td class="resource-label">Damage</td>
                         <td class="resource-label">Type</td>
@@ -349,7 +349,7 @@
                         </td>
                         <td class="resource-label">
                             <span class="tooltip">
-                                Rule Of <!-- TODO - Make this update automatically upon changing the resistance attribute - 4 -->
+                                Rule Of
                                 <span class="tooltiptext" style="margin-left: -100px;">This should be 13 for Fright and 16 for everything else except in special cases.</span>
                             </span>
                         </td>
