Added tooltips to spell sheet afflictions for large area injury

--- a/templates/item/Spell-sheet.html
+++ b/templates/item/Spell-sheet.html
@@ -383,6 +383,8 @@
                                         dbk: Double Knockback<br>
                                         dbt: Double Blunt Trauma<br>
                                         nw: No Wounding<br>
+                                        la: Large Area Injury<br>
+                                        area: Large Area Injury<br>
                                     </div>
                                 </span>
                             </span>
